--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "lisence": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && babel src -d lib",
+    "prebuild": "jest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,6 +22,8 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "babel-cli": "^6.26.0",        
+    "jest": "^29.6.0"              
   }
 }
